--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "author": "Miquel Àngel Fontana",
   "license": "ISC",
   "dependencies": {
+    "babel-loader": "^8.0.5",
     "lodash": "^4.17.11",
     "mocha": "^6.0.2"
   }
