--- a/package.json
+++ b/package.json
@@ -3,13 +3,25 @@
   "version": "1.0.0",
   "description": "Examples and exercises of functional programming",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha --require @babel/register exercises/test",
+    "test-e1": "mocha --require @babel/register exercises/test/exercise1Test.js",
+    "test-e2": "mocha --require @babel/register exercises/test/exercise2Test.js"
   },
   "author": "Miquel Àngel Fontana",
   "license": "ISC",
   "dependencies": {
+    "@babel/core": "^7.4.0",
+    "@babel/preset-env": "^7.4.2",
+    "@babel/register": "^7.4.0",
     "babel-loader": "^8.0.5",
     "lodash": "^4.17.11",
     "mocha": "^6.0.2"
+  },
+  "babel": {
+    "presets": [
+      [
+        "@babel/preset-env"
+      ]
+    ]
   }
 }
