--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "test": "mocha --require @babel/register exercises/test",
     "test-e1": "mocha --require @babel/register exercises/test/exercise1Test.js",
-    "test-e2": "mocha --require @babel/register exercises/test/exercise2Test.js"
+    "test-e2": "mocha --require @babel/register exercises/test/exercise2Test.js",
+    "test-e3": "mocha --require @babel/register exercises/test/exercise3Test.js"
   },
   "author": "Miquel Àngel Fontana",
   "license": "ISC",
