--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "test": "mocha --require @babel/register exercises/test",
     "test-e1": "mocha --require @babel/register exercises/test/exercise1Test.js",
     "test-e2": "mocha --require @babel/register exercises/test/exercise2Test.js",
-    "test-e3": "mocha --require @babel/register exercises/test/exercise3Test.js"
+    "test-e3": "mocha --require @babel/register exercises/test/exercise3Test.js",
+    "test-e4": "mocha --require @babel/register exercises/test/exercise4Test.js"
   },
   "author": "Miquel Àngel Fontana",
   "license": "ISC",
